fix: align image at single post

--- a/styles/_markdown.module.sass
+++ b/styles/_markdown.module.sass
@@ -5,7 +5,6 @@
     width: 100%
     display: flex
     flex-direction: column
-    // align-items: center
     gap: 3rem
 
     & p
@@ -32,7 +31,9 @@
             font-size: 4em
             color: $red
 
-    & p img
-        width: 100%
-        // position: absolute
+    & h6
+        margin: 0 auto
+
+    & h6 img
         max-width: 108rem
+        width: 100%
